# cosmostrix

./: .codespellrc  .gitignore  .yamllint  AUTHORS  BRANDING.md  CHANGELOG.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  NOTICE  PERFORMANCE_REPORT.md  README.md  ROADMAP.md  RULES.md  SUPPORT.md  TRADEMARK.md  build.rs  build.sh  deny.toml  rust-toolchain.toml  version-to.sh  worklog.md
.cargo/: config.toml
.githooks/: pre-push
.github/: FUNDING.yml
.github/workflows/: aur.yml  auto-tag.yml  ci.yml  docs-ci.yml  gitbot-audit.yml  gitbot-deps.yml  maintenance.yml  release.yml  version-bump.yml
assets/: README.md
aur/cosmostrix-bin/: .SRCINFO  PKGBUILD
benchmark/: .gitignore  README.md  benchmark.sh  hyperfine.md  massif-30s.out  massif-pro-native-21532f.out  massif-release-21532f.out  perf-pro-native.txt  perf-release.txt  time-pro-native.txt  time-release.txt
config/: config.toml  cosmostrix.example.toml
docs/: ATMOSPHERE_ENGINE.md  ATMOSPHERE_EXPANSION.md  ATMOSPHERE_PRESETS.md  CINEMATIC_BREATHING.md  DRAGON_ARCHITECTURE.md  DRAGON_EXPLORATION.md  DRAGON_FINDINGS.md  ENDURANCE.md  ENDURANCE_ANALYSIS_72h.md  PERFORMANCE_ACROSS_SCALES.md  PERFORMANCE_REPORT.md  PHILOSOPHY.md  PROFILE_ECOSYSTEM.md  PROFILE_EXAMPLES.md  RAPL_ACCESS.md  RELEASE_CANDIDATE.md  RELEASE_GUARD.md  RENDER_ENGINE.md  ROADMAP.md  RULES.md  SIMD_FEASIBILITY.md  STABILITY_AUDIT.md  SUPPLY_CHAIN.md  SUPPORT.md  SYSTEM_REQUIREMENTS.md  TERMINAL_COMPATIBILITY.md  TERMINAL_KILL_CLEANUP.md  TERMINAL_LIFECYCLE_MATRIX.md  V5_NIGHTFALL_PLAN.md  VERIFY_RELEASE.md  VISUAL_STABILITY.md  ZACTRIX_50K_LAB.md  ZACTRIX_CACHE.md  ZACTRIX_CORE.md  ZACTRIX_ENGINE.md  ZACTRIX_INTEGRATION_AUDIT.md  cosmostrix-next-vision.md  rfc-atmospheric-event-engine.md  v5.0.0-release-benchmark-report.md  visual-review-lightning-v10.md
docs/workflow/: about-ci.md
scripts/: bench-compare.sh  bench-runner.py  benchmark_competitors.py  build.sh  check-headers.sh  check-rs-loc.sh  check-version-anti-patterns.sh  ebpf-profile.sh  endurance-summary.sh  gen-density-presets.py  install-githooks.sh  install.sh  monitor-cosmostrix.sh  rc-smoke.sh  refmatrix.c  release-benchmark-report.sh  run_scaling_benchmarks.py  scaling_results.json  scaling_results.md  test-endurance-summary.sh  uninstall.sh  verify-release-build.sh  version-to.sh
src/: alloc_trace.rs  ambient_smoke_tests.rs  app.rs  atmosphere.rs  atmosphere_ab.rs  atmosphere_ab_tests.rs  atmosphere_adaptive.rs  atmosphere_apply.rs  atmosphere_apply_cl_tests.rs  atmosphere_apply_tests.rs  atmosphere_controlled_live.rs  atmosphere_custom.rs  atmosphere_expansion_tests.rs  atmosphere_presets.rs  atmosphere_probe.rs  atmosphere_runtime.rs  atmosphere_shadow.rs  atmosphere_tests.rs  atmosphere_verifier.rs  atmosphere_visual.rs  bench.rs  bench_baseline.rs  bench_comp.rs  bench_cpu.rs  bench_energy.rs  bench_helpers.rs  bench_io.rs  bench_json.rs  bench_mem.rs  bench_meta.rs  bench_perf.rs  bench_progress.rs  bench_report.rs  bench_report_tests.rs  bench_scale.rs  bench_tune.rs  bench_visual.rs  cell.rs  central_colors.rs  charset.rs  (+58 more)
src/cloud/: atmospheric_events.rs  ecosystem.rs  living_rain.rs  mod.rs  monolith.rs  monolith_glyphs.rs  monolith_tests.rs  phosphor.rs  rain.rs  render.rs  runtime_controls.rs  scene_runtime.rs  spawn.rs  state.rs
src/cloud/events/: ghost.rs  helpers.rs  lightning.rs  mod.rs
src/cloud/tests/: mod.rs  tests_architecture.rs  tests_color_stability.rs  tests_edge_fade.rs  tests_monolith.rs  tests_phosphor.rs  tests_scene.rs  tests_visual_depth.rs
src/cloud/tests/tests_monolith/: charset.rs  core.rs  depth.rs  mod.rs  residue.rs  transitions.rs
src/cloud/tests/tests_scene/: controls.rs  cycle.rs  fresh_entry.rs  mod.rs  residue.rs  sparse_entry.rs  transitions.rs
src/docs_tests/: assets.rs  atmosphere.rs  doctor_report.rs  endurance.rs  metadata.rs  mod.rs  profile.rs  readme.rs  release.rs  safety.rs  terminal_lifecycle.rs  v5_nightfall.rs  zactrix.rs  zactrix_integration.rs
src/dragon/: README.md  mod.rs
src/dragon/egg/: mod.rs
src/dragon_engine/: bench.rs  cli.rs  cloud.rs  core.rs  diagnostics.rs  interactive.rs  mod.rs
src/interactive/: activity.rs  adaptive.rs  bg_fill.rs  event_loop.rs  hud.rs  input.rs  intro.rs  intro_cosmic.rs  intro_logo.rs  mod.rs  signal_handlers.rs  tests.rs  watchdog.rs
src/zactrix_engine/: cache.rs  core.rs  metrics.rs  mod.rs  render.rs  scheduler.rs  system.rs
workflow/: about-ci.md
