[package]
name = "cosmostrix"
version = "1.0.3-alpha.2"
edition = "2021"
rust-version = "1.81"
authors = ["rezky_nightky"]
description = "A cosmic take on the classic Matrix rain for the terminal"
license = "MIT"
repository = "https://github.com/oxyzenq/cosmostrix"
build = "build.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.9.2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.17"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.5"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.pro]
inherits = "release"
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.pro-linux-v1]
inherits = "pro"

[profile.pro-linux-v2]
inherits = "pro"

[profile.pro-linux-v3]
inherits = "pro"

[profile.pro-linux-v4]
inherits = "pro"

[profile.pro-macos-aarch64-native]
inherits = "pro"

[profile.pro-win-x86_64]
inherits = "pro"

[profile.pro-android-aarch64]
inherits = "pro"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
inherits = "release"
debug = true
overflow-checks = false

# Platform-specific optimizations
# At ./cargo/config.toml
