# Copyright (C) 2026 rezky_nightky
# SPDX-License-Identifier: MIT

[package]
name = "cosmostrix"
version = "3.9.0"
edition = "2021"
rust-version = "1.81"
authors = ["rezky_nightky (oxyzenQ)"]
description = "High-performance cinematic Matrix rain renderer for the terminal."
license = "MIT"
repository = "https://github.com/oxyzenQ/cosmostrix"
build = "build.rs"

[dependencies]
clap = { version = ">=4.5, <4.6", features = ["derive"] }
crossterm = "0.29"
rand = "0.9"
bitvec = "1"
smallvec = "1"
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "unwind"
overflow-checks = false
incremental = false

[profile.pro]
inherits = "release"
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "unwind"
overflow-checks = false
incremental = false

[profile.pro-linux-v1]
inherits = "pro"

[profile.pro-linux-v2]
inherits = "pro"

[profile.pro-linux-v3]
inherits = "pro"

[profile.pro-linux-v4]
inherits = "pro"

[profile.pro-macos-aarch64-native]
inherits = "pro"

[profile.pro-win-x86_64]
inherits = "pro"

[profile.pro-win-aarch64]
inherits = "pro"

[profile.pro-android-aarch64]
inherits = "pro"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
inherits = "release"
debug = true
strip = false
overflow-checks = false

# Platform-specific optimizations
# At ./cargo/config.toml
