# Copyright (C) 2026 rezky_nightky
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "cosmostrix"
version = "14.0.0"
edition = "2021"
rust-version = "1.81"
authors = ["rezky_nightky (oxyzenQ)"]
description = "Production-grade cinematic Matrix rain renderer for serious terminal environments."
license = "GPL-3.0-only"
repository = "https://github.com/oxyzenQ/cosmostrix"
build = "build.rs"

[dependencies]
clap = { version = ">=4.5, <4.6", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29"
rand = "0.9"
bitvec = "1"
smallvec = "1"
unicode-width = "0.2"
chrono = { version = ">=0.4.38, <0.5", default-features = false, features = ["clock"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "unwind"
overflow-checks = false
incremental = false

[profile.pro]
inherits = "release"
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "unwind"
overflow-checks = false
incremental = false

[profile.pro-linux-v3]
inherits = "pro"

[profile.pro-linux-v4]
inherits = "pro"

[profile.pro-linux-musl]
inherits = "pro"

[profile.pro-macos-aarch64-native]
inherits = "pro"

[profile.pro-win-amd64]
inherits = "pro"

[profile.pro-win-aarch64]
inherits = "pro"

[profile.pro-android-aarch64]
inherits = "pro"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
inherits = "release"
debug = true
strip = false
overflow-checks = false

# Platform-specific optimizations
# At ./cargo/config.toml
